# ai-loop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.ai-loop/: code-digest.md  config.yaml  state.json
.ai-loop/rounds/001/: acceptance.md  design.md  dev-log.md  requirement.md  review.md
.ai-loop/rounds/002/: acceptance.md  design.md  dev-log.md  requirement.md  review.md
.cursor/: settings.json
.cursor/rules/: commit-with-doc-update.mdc
ai_loop/: brain.py  cli.py  config.py  context.py  detect.py  logger.py  memory.py  orchestrator.py  server.py  state.py
ai_loop/roles/: base.py  developer.py  product.py  reviewer.py
ai_loop/templates/: developer_claude.md  product_claude.md  reviewer_claude.md
docs/: architecture.md  brain.md  config-reference.md  development.md  index.md  memory-context.md  orchestration.md  roles.md
specs/: .active
specs/add-interaction-logging/: sketch.md
specs/developer-sdd-design/: sketch.md
specs/enhance-product-role-from-gstack/: sketch.md
specs/merge-reviewer-into-product/: explore.md  plan.md  spec.md  tasks.md
specs/orchestrator-resilience/: sketch.md
specs/product-knowledge-doc/: sketch.md
specs/require-human-confirm-before-req/: sketch.md
specs/version-aware-template-update/: sketch.md
templates/: orchestrator_claude.md  product_claude.md
tests/: conftest.py  test_brain.py  test_cli.py  test_config.py  test_context.py  test_detect.py  test_integration.py  test_logger.py  test_memory.py  test_orchestrator.py  test_roles.py  test_server.py  test_state.py
(+9 files in other folders)
